# sphinx-ai-assistant

./: .gitignore  README.md  example_conf.py  pyproject.toml
sphinx-ai-assistant/: __init__.py
sphinx-ai-assistant/static/: ai-assistant.css  ai-assistant.js
sphinx_ai_assistant/: __init__.py
sphinx_ai_assistant/static/: ai-assistant.css  ai-assistant.js
