[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-ai-assistant"
version = "0.1.0"
description = "A Sphinx extension that adds AI assistant features to documentation pages"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["sphinx", "documentation", "ai", "mcp", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "sphinx>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/sphinx-ai-assistant"
Repository = "https://github.com/yourusername/sphinx-ai-assistant"
Issues = "https://github.com/yourusername/sphinx-ai-assistant/issues"

[tool.setuptools]
packages = ["sphinx_ai_assistant"]

[tool.setuptools.package-data]
sphinx_ai_assistant = ["static/*", "templates/*"]
